# geodetics

./: .gitignore  AddingProjections.txt  Geodetics.cabal  LICENSE  README.md  ToDo.txt  cabal.project  changelog.md  geodetics.cabal  stack.yaml
.github/workflows/: ci.yaml
Docs/: intersection.odt
src/Geodetics/: Altitude.hs  Coordinates.hs  Ellipsoids.hs  Geodetic.hs  Grid.hs  LatLongParser.hs  MGRS.hs  Path.hs  PolarStereographic.hs  Stereographic.hs  TransverseMercator.hs  UK.hs  UTM.hs
test/: ArbitraryInstances.hs  LatLongParser.hs  Main.hs
