name:           Geodetics
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple
author:         Paul Johnson <paul@cogito.org.uk>
data-files:     ToDo.txt
tested-with:    GHC==7.4.2
license:        BSD3
copyright:      Paul Johnson 2014.
synopsis:       Terrestrial coordinate systems and associated calculations.
description:    Precise geographical coordinates (latitude & longitude), with conversion between
                different reference frames.
                .
                Transverse Mercator grids.
                .
                Certain "priviledged" reference frames and grids are given distinct
                types so that coordinates expressed within them are distinguished 
                from coordinates in other frames.

library
  hs-source-dirs:  src
  build-depends:   
                   base >= 4,
                   dimensional == 0.13.*,
                   array >= 0.4
  ghc-options:     -Wall
  exposed-modules: 
                   Geodetics.Ellipsoids,
                   Geodetics.UK,
                   Geodetics.Geodetic,
                   Geodetics.Altitude,
                   Geodetics.Grid,
                   Geodetics.TransverseMercator
  other-modules:   Geodetics.Path

test-suite GeodeticTest
  type:            exitcode-stdio-1.0
  main-is:         Main.hs
  x-uses-tf:       true
  build-depends:   
                   base >= 4,
                   HUnit >= 1.2 && < 2,
                   QuickCheck >= 2.4,
                   test-framework >= 0.4.1,
                   test-framework-quickcheck2,
                   test-framework-hunit,
                   array >= 0.4
  hs-source-dirs:  
                   src, 
                   test
  ghc-options:     -Wall -rtsopts
  other-modules:   
                   ArbitraryInstances,
                   Main,
                   Geodetics.Geodetic,
                   Geodetics.Altitude,
                   Geodetics.Grid,
                   Geodetics.TransverseMercator,
                   Geodetics.Path

