cabal-version:  3.0
name:           geodetics
version:        1.0.0
build-type:     Simple
author:         Paul Johnson <paul@cogito.org.uk>
tested-with:    ghc ==9.6.6 ghc ==9.8.4 ghc ==9.10.1 ghc ==9.12.1
extra-doc-files:
                AddingProjections.txt,
                LICENSE,
                README.md,
                changelog.md,
                ToDo.txt
license:        BSD-3-Clause
copyright:      Paul Johnson 2018,2024
synopsis:       Terrestrial coordinate systems and geodetic calculations.
description:    Precise geographical coordinates (latitude & longitude), with conversion between
                different reference frames and projections.
                
                Certain distinguished reference frames and grids are given distinct
                types so that coordinates expressed within them cannot be confused with
                from coordinates in other frames.
license-file:   LICENSE
maintainer:     Paul Johnson <paul@cogito.org.uk>
homepage:       https://github.com/PaulJohnson/geodetics
category:       Geography
tested-with:    GHC==9.10.1

source-repository head
  type:     git
  location: https://github.com/PaulJohnson/geodetics

flag dev
    description: Turn on development settings.
    default:     False
    manual:      True

library
  hs-source-dirs:  src
  build-depends:
                   base >= 4.17 && < 5,
                   array >= 0.1 && < 0.6,
                   parsec,
                   Stream >= 0.4.6 && < 0.5
  exposed-modules:
                   Geodetics.Altitude,
                   Geodetics.Ellipsoids,
                   Geodetics.Geodetic,
                   Geodetics.Grid,
                   Geodetics.LatLongParser,
                   Geodetics.Path,
                   Geodetics.Stereographic,
                   Geodetics.TransverseMercator,
                   Geodetics.UK,
                   Geodetics.UTM
  Default-Language: Haskell2010
  if flag(dev)
      ghc-options:
          -Wall -Werror -Wredundant-constraints -Wpartial-fields
          -Wunused-packages

test-suite GeodeticTest
  type:            exitcode-stdio-1.0
  main-is:         Main.hs
  x-uses-tf:       true
  build-depends:   geodetics,
                   base >= 4.6 && < 5,
                   hspec >= 2.11,
                   HUnit >= 1.6,
                   QuickCheck >= 2.4,
                   checkers
  hs-source-dirs:
                   test
  ghc-options:     -rtsopts
  other-modules:
                   ArbitraryInstances
                   LatLongParser
  Default-Language: Haskell2010
  if flag(dev)
      ghc-options:
          -Wall -Werror -Wredundant-constraints -Wpartial-fields
          -Wunused-packages
